--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "@apollo/server": "^4.10.0",
     "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.0.0",
+    "js-yaml": "^4.1.0",
+    "knex": "^3.1.0",
+    "mysql2": "^3.9.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
